--- a/website/Schul-suche.html
+++ b/website/Schul-suche.html
@@ -13,7 +13,7 @@
 					<img src="my_logo.jpg" class="logo">
 				</td>
 				<td class = "ueberschrift">
-					<h1>Schul-suche</h1>
+					<h1>Schul-Suche</h1>
 				</td>
 				<td>
 					<img src="my_logo.jpg" class="logo" style="float:right">
