--- a/website/Schul-suche.html
+++ b/website/Schul-suche.html
@@ -4,6 +4,7 @@
 		<title>Open_Vertretung_Schul-suche</title>
 	     <link rel=stylesheet type=text/css href="style.css">
 		 <script src="js.js"></script>
+		 <meta charset="UTF-8">
 	</head>
 <body script = "onload()">
 	<div id="kopf">
@@ -29,6 +30,7 @@
 	</tr>
 </table> 
 <table border="3" style="width:100%" class = "table" > 
+	<thead>
 	<tr> 
 		<th class = "stunde">Stunde</th> 
 		<th class = "fach">Fach</th>
@@ -36,14 +38,10 @@
 		<th class = "lehrer">Lehrer</th>
 		<th class = "besonderheiten">Besonderheiten</th>
 	</tr>
-	<tr>
-		<td>...</td>
-		<td>...</td>
-		<td>...</td>
-		<td>...</td>
-		<td>...</td>
-	</tr>
+	</thead>
+	<tbody id = "olo">
 
+	</tbody>
 </table>
 
   <footer style="position: fixed; bottom: 0; text-align: center; font-size: 20px;">
