--- a/website/Schul-suche.html
+++ b/website/Schul-suche.html
@@ -47,7 +47,7 @@
   <footer style="position: fixed; bottom: 0; text-align: center; font-size: 20px;">
     <a href="https://github.com/Jugendhackt/OpenVertretung">Github</a>
     <a href="https://hackdash.org/projects/5a19543c87d0970a0e0a4070">Hackdash</a>
-	<a href="Anmeldung.html">Anmelden</a>
+	<a href="../eingabemaske/app/views/teacher/main.html.erb">Anmelden</a>
   </footer>
   </body>
 
